[package]
name = "armory_lib"
version = "0.1.0"
edition = "2021"
description = "A library for publishing cargo workspaces in one go"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.61.1"
semver = "1.0.9"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
retry = "1.3.1"